[gd_scene load_steps=20 format=3 uid="uid://hrhwnj0mq6fc"]

[ext_resource type="Script" path="res://Script/player.gd" id="1_3ywfd"]
[ext_resource type="Texture2D" uid="uid://bwdk3dt1r5x3i" path="res://Art/spritesheet.png" id="1_pxwjj"]
[ext_resource type="AudioStream" uid="uid://4htkhb6qi1s1" path="res://Audio/footstep_snow_001.ogg" id="3_lskqb"]
[ext_resource type="AudioStream" uid="uid://cgemigron8yb2" path="res://Audio/jump.ogg" id="4_pddj3"]
[ext_resource type="AudioStream" uid="uid://crtr4dcvs8ogm" path="res://Audio/FallSound.wav" id="5_ksj6l"]
[ext_resource type="AudioStream" uid="uid://bfnil677bucwi" path="res://Audio/Power Up.wav" id="6_gtd7b"]
[ext_resource type="AudioStream" uid="uid://c4txlnl8doeya" path="res://Audio/bubble.wav" id="7_xtlym"]
[ext_resource type="AudioStream" uid="uid://dwvi4oxpbi084" path="res://Audio/explodeBubble.ogg" id="8_2riiu"]
[ext_resource type="AudioStream" uid="uid://cngnmqhd7pfkv" path="res://Audio/deathSound.ogg" id="9_ysxg8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nkjca"]
size = Vector2(4, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mocdo"]
size = Vector2(2, 8)

[sub_resource type="Animation" id="Animation_qmcla"]
resource_name = "DoubleJump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 40, 8, 8)]
}

[sub_resource type="Animation" id="Animation_q67xp"]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 32, 8, 8)]
}

[sub_resource type="Animation" id="Animation_inw2d"]
resource_name = "Idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(0, 56, 8, 8), Rect2(0, 64, 8, 8), Rect2(0, 72, 8, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_et484"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 56, 8, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.999998, 1)]
}

[sub_resource type="Animation" id="Animation_qmmv5"]
resource_name = "Run"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 8, 8), Rect2(0, 8, 8, 8), Rect2(0, 16, 8, 8), Rect2(0, 24, 8, 8)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footstepSound"
}, {
"args": [],
"method": &"play_footstepSound"
}]
}

[sub_resource type="Animation" id="Animation_pe5s2"]
resource_name = "SingleJump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 32, 8, 8)]
}

[sub_resource type="Animation" id="Animation_evitl"]
resource_name = "bubble"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(0, 0, 8, 8), Rect2(72, 0, 16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-0.999998, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_psqv5"]
_data = {
"DoubleJump": SubResource("Animation_qmcla"),
"Fall": SubResource("Animation_q67xp"),
"Idle": SubResource("Animation_inw2d"),
"RESET": SubResource("Animation_et484"),
"Run": SubResource("Animation_qmmv5"),
"SingleJump": SubResource("Animation_pe5s2"),
"bubble": SubResource("Animation_evitl")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_3ywfd")
SPEED = 50
ACC = 15
FRICTION = 25
jump_time_to_peak = 1.0
jump_time_to_descent = 0.3

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 3
texture_filter = 1
scale = Vector2(-0.999998, 1)
texture = ExtResource("1_pxwjj")
flip_h = true
region_enabled = true
region_rect = Rect2(0, 56, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_nkjca")

[node name="Hitbox" type="Area2D" parent="." groups=["Player"]]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_mocdo")

[node name="BubbleTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ReturnBubbleTIme" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_psqv5")
}

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(0, 1)

[node name="AudioControl" type="Node" parent="."]

[node name="FootStep" type="AudioStreamPlayer2D" parent="AudioControl"]
stream = ExtResource("3_lskqb")
volume_db = -20.0

[node name="Jump" type="AudioStreamPlayer2D" parent="AudioControl"]
stream = ExtResource("4_pddj3")

[node name="Fall" type="AudioStreamPlayer2D" parent="AudioControl"]
stream = ExtResource("5_ksj6l")

[node name="Power" type="AudioStreamPlayer2D" parent="AudioControl"]
stream = ExtResource("6_gtd7b")

[node name="Bubble" type="AudioStreamPlayer2D" parent="AudioControl"]
stream = ExtResource("7_xtlym")

[node name="ExplodeBubble" type="AudioStreamPlayer2D" parent="AudioControl"]
stream = ExtResource("8_2riiu")

[node name="Death" type="AudioStreamPlayer2D" parent="AudioControl"]
stream = ExtResource("9_ysxg8")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="BubbleTime" to="." method="_on_bubble_time_timeout"]
[connection signal="timeout" from="ReturnBubbleTIme" to="." method="_on_return_bubble_t_ime_timeout"]
